2009-07-09  Scott James Remnant  <scott@netsplit.com>

	* util/utmp.c (utmp_read_runlevel): Also catch a zero runlevel from
	utmp, replacing with 'N' - these functions should never return 0
	* util/sysv.c (sysv_change_runlevel): Should set prevlevel to N
	when we don't find one

	* util/utmp.c (utmp_read_runlevel): Catch a negative runlevel from
	corrupt utmp data, convert to 'N'
	(utmp_get_runlevel): Return N when RUNLEVEL is set but empty,
	rather than falling through

	* util/telinit.c: Catch a missing argument separately so we don't
	output "(null)"

	* README: Update requirements.
	* TODO: Update.

	* conf/rc-sysinit.conf: Fix typo.

2009-07-08  Scott James Remnant  <scott@netsplit.com>

	* conf/rc-sysinit.conf: Michael Biebl pointed out that by setting
	the runlevel to "S" during sysinit, we end up with the runlevel
	after boot being "S 2" - and that means scripts in rc2.d that
	are also in rcS.d won't get started.  The way we had it before
	("N 2") was correct.  This happily fixes the one corner case our
	reboot handling didn't cover - crashing in single user mode and
	rebooting.

	* util/telinit.c: Fix missing ret = from kill

	* conf/rc-sysinit.conf: Ignore -s/single if we're already coming
	from single-user-mode.

	* util/telinit.c (options): Unignore the -t option
	* NEWS: Update.

	* init/main.c (hup_handler): Also try and reconnect to the message
	bus if we've lost the connection.

	* init/conf.c (conf_source_reload_dir): Don't blacklist certain
	patterns from the configuration directory, instead just filter
	to whitelist.
	(conf_dir_filter): Whitelist filter, only accept files ending
	in .conf
	(conf_reload_path): Strip .conf from the filename to generate
	the job name.
	(conf_file_filter): Add the extra is_dir argument.
	* init/tests/test_conf.c (test_source_reload_job_dir)
	(test_source_reload_conf_dir, test_source_reload_file)
	(test_source_reload): Append .conf to all our filenames
	* init/tests/test_control.c (test_reload_configuration): Append